syntax = "proto3";

option go_package = "model/pb";

package wacoreproto;

service WaCoreGateway {
  rpc GetClientContact (ContactRequest) returns (ContactListResponse) {}
}

message ContactRequest {
  string sender_jid = 1;
}

message ContactItem {
  string jid = 1;
  string name = 2;
  string short = 3;
}

message ContactListResponse {
  repeated ContactItem contacts = 1;
}